BCEL update