@@ -1,9 +1,10 @@
 /*
- * Copyright  2000-2004 The Apache Software Foundation
- *
- *  Licensed under the Apache License, Version 2.0 (the "License"); 
- *  you may not use this file except in compliance with the License.
- *  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
  *
  *      http://www.apache.org/licenses/LICENSE-2.0
  *
@@ -26,17 +27,18 @@ import com.crash4j.engine.spi.instrument.bcel.util.ByteSequence;
  *
  * <PRE>Stack: ... -&gt; ..., value</PRE>
  *
- * @version $Id: BIPUSH.java 386056 2006-03-15 11:31:56Z tcurdt $
+ * @version $Id: BIPUSH.java 1152072 2011-07-29 01:54:05Z dbrosius $
  * @author  <A HREF="mailto:m.dahm@gmx.de">M. Dahm</A>
  */
 public class BIPUSH extends Instruction implements ConstantPushInstruction {
 
+    private static final long serialVersionUID = -6859389515217572656L;
     private byte b;
 
 
     /**
      * Empty constructor needed for the Class.newInstance() statement in
-     * InstructionImpl.readInstruction(). Not to be used otherwise.
+     * Instruction.readInstruction(). Not to be used otherwise.
      */
     BIPUSH() {
     }
@@ -53,6 +55,7 @@ public class BIPUSH extends Instruction implements ConstantPushInstruction {
     /**
      * Dump instruction as byte code to stream out.
      */
+    @Override
     public void dump( DataOutputStream out ) throws IOException {
         super.dump(out);
         out.writeByte(b);
@@ -62,6 +65,7 @@ public class BIPUSH extends Instruction implements ConstantPushInstruction {
     /**
      * @return mnemonic for instruction
      */
+    @Override
     public String toString( boolean verbose ) {
         return super.toString(verbose) + " " + b;
     }
@@ -70,6 +74,7 @@ public class BIPUSH extends Instruction implements ConstantPushInstruction {
     /**
      * Read needed data (e.g. index) from file.
      */
+    @Override
     protected void initFromFile( ByteSequence bytes, boolean wide ) throws IOException {
         length = 2;
         b = bytes.readByte();
@@ -77,7 +82,7 @@ public class BIPUSH extends Instruction implements ConstantPushInstruction {
 
 
     public Number getValue() {
-        return new Integer(b);
+        return Integer.valueOf(b);
     }
 
 
@@ -96,6 +101,7 @@ public class BIPUSH extends Instruction implements ConstantPushInstruction {
      *
      * @param v Visitor object
      */
+    @Override
     public void accept( Visitor v ) {
         v.visitPushInstruction(this);
         v.visitStackProducer(this);
