@@ -1,9 +1,10 @@
 /*
- * Copyright  2000-2004 The Apache Software Foundation
- *
- *  Licensed under the Apache License, Version 2.0 (the "License"); 
- *  you may not use this file except in compliance with the License.
- *  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
  *
  *      http://www.apache.org/licenses/LICENSE-2.0
  *
@@ -26,15 +27,17 @@ import com.crash4j.engine.spi.instrument.bcel.util.ByteSequence;
  *
  * <PRE>Stack: ... -&gt; ..., item</PRE>
  *
- * @version $Id: LDC.java 386056 2006-03-15 11:31:56Z tcurdt $
+ * @version $Id: LDC.java 1152072 2011-07-29 01:54:05Z dbrosius $
  * @author  <A HREF="mailto:m.dahm@gmx.de">M. Dahm</A>
  */
-public class LDC extends CPInstruction implements PushInstruction, ExceptionThrower,
-        TypedInstruction {
+public class LDC extends CPInstruction implements PushInstruction, ExceptionThrower {
+
+    private static final long serialVersionUID = -972820476154330719L;
+
 
     /**
      * Empty constructor needed for the Class.newInstance() statement in
-     * InstructionImpl.readInstruction(). Not to be used otherwise.
+     * Instruction.readInstruction(). Not to be used otherwise.
      */
     LDC() {
     }
@@ -62,6 +65,7 @@ public class LDC extends CPInstruction implements PushInstruction, ExceptionThro
      * Dump instruction as byte code to stream out.
      * @param out Output stream
      */
+    @Override
     public void dump( DataOutputStream out ) throws IOException {
         out.writeByte(opcode);
         if (length == 2) {
@@ -75,6 +79,7 @@ public class LDC extends CPInstruction implements PushInstruction, ExceptionThro
     /**
      * Set the index to constant pool and adjust size.
      */
+    @Override
     public final void setIndex( int index ) {
         super.setIndex(index);
         setSize();
@@ -84,6 +89,7 @@ public class LDC extends CPInstruction implements PushInstruction, ExceptionThro
     /**
      * Read needed data (e.g. index) from file.
      */
+    @Override
     protected void initFromFile( ByteSequence bytes, boolean wide ) throws IOException {
         length = 2;
         index = bytes.readUnsignedByte();
@@ -100,15 +106,18 @@ public class LDC extends CPInstruction implements PushInstruction, ExceptionThro
             case com.crash4j.engine.spi.instrument.bcel.Constants.CONSTANT_Float:
                 return new Float(((com.crash4j.engine.spi.instrument.bcel.classfile.ConstantFloat) c).getBytes());
             case com.crash4j.engine.spi.instrument.bcel.Constants.CONSTANT_Integer:
-                return new Integer(((com.crash4j.engine.spi.instrument.bcel.classfile.ConstantInteger) c).getBytes());
+                return Integer.valueOf(((com.crash4j.engine.spi.instrument.bcel.classfile.ConstantInteger) c).getBytes());
             case com.crash4j.engine.spi.instrument.bcel.Constants.CONSTANT_Class:
-                return c;
+            	int nameIndex = ((com.crash4j.engine.spi.instrument.bcel.classfile.ConstantClass) c).getNameIndex();
+            	c = cpg.getConstantPool().getConstant(nameIndex);
+            	return new ObjectType(((com.crash4j.engine.spi.instrument.bcel.classfile.ConstantUtf8) c).getBytes());
             default: // Never reached
                 throw new RuntimeException("Unknown or invalid constant type at " + index);
         }
     }
 
 
+    @Override
     public Type getType( ConstantPoolGen cpg ) {
         switch (cpg.getConstantPool().getConstant(index).getTag()) {
             case com.crash4j.engine.spi.instrument.bcel.Constants.CONSTANT_String:
@@ -125,7 +134,7 @@ public class LDC extends CPInstruction implements PushInstruction, ExceptionThro
     }
 
 
-    public Class[] getExceptions() {
+    public Class<?>[] getExceptions() {
         return com.crash4j.engine.spi.instrument.bcel.ExceptionConstants.EXCS_STRING_RESOLUTION;
     }
 
@@ -138,6 +147,7 @@ public class LDC extends CPInstruction implements PushInstruction, ExceptionThro
      *
      * @param v Visitor object
      */
+    @Override
     public void accept( Visitor v ) {
         v.visitStackProducer(this);
         v.visitPushInstruction(this);
