@@ -1,9 +1,10 @@
 /*
- * Copyright  2000-2004 The Apache Software Foundation
- *
- *  Licensed under the Apache License, Version 2.0 (the "License"); 
- *  you may not use this file except in compliance with the License.
- *  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
  *
  *      http://www.apache.org/licenses/LICENSE-2.0
  *
@@ -26,17 +27,18 @@ import com.crash4j.engine.spi.instrument.bcel.util.ByteSequence;
  *
  * <PRE>Stack: ... -&gt; ..., value</PRE>
  *
- * @version $Id: SIPUSH.java 386056 2006-03-15 11:31:56Z tcurdt $
+ * @version $Id: SIPUSH.java 1152072 2011-07-29 01:54:05Z dbrosius $
  * @author  <A HREF="mailto:m.dahm@gmx.de">M. Dahm</A>
  */
 public class SIPUSH extends Instruction implements ConstantPushInstruction {
 
+    private static final long serialVersionUID = -5670145672311191256L;
     private short b;
 
 
     /**
      * Empty constructor needed for the Class.newInstance() statement in
-     * InstructionImpl.readInstruction(). Not to be used otherwise.
+     * Instruction.readInstruction(). Not to be used otherwise.
      */
     SIPUSH() {
     }
@@ -51,6 +53,7 @@ public class SIPUSH extends Instruction implements ConstantPushInstruction {
     /**
      * Dump instruction as short code to stream out.
      */
+    @Override
     public void dump( DataOutputStream out ) throws IOException {
         super.dump(out);
         out.writeShort(b);
@@ -60,6 +63,7 @@ public class SIPUSH extends Instruction implements ConstantPushInstruction {
     /**
      * @return mnemonic for instruction
      */
+    @Override
     public String toString( boolean verbose ) {
         return super.toString(verbose) + " " + b;
     }
@@ -68,6 +72,7 @@ public class SIPUSH extends Instruction implements ConstantPushInstruction {
     /**
      * Read needed data (e.g. index) from file.
      */
+    @Override
     protected void initFromFile( ByteSequence bytes, boolean wide ) throws IOException {
         length = 3;
         b = bytes.readShort();
@@ -75,7 +80,7 @@ public class SIPUSH extends Instruction implements ConstantPushInstruction {
 
 
     public Number getValue() {
-        return new Integer(b);
+        return Integer.valueOf(b);
     }
 
 
@@ -94,6 +99,7 @@ public class SIPUSH extends Instruction implements ConstantPushInstruction {
      *
      * @param v Visitor object
      */
+    @Override
     public void accept( Visitor v ) {
         v.visitPushInstruction(this);
         v.visitStackProducer(this);
