@@ -1,9 +1,10 @@
 /*
- * Copyright  2000-2004 The Apache Software Foundation
- *
- *  Licensed under the Apache License, Version 2.0 (the "License"); 
- *  you may not use this file except in compliance with the License.
- *  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
  *
  *      http://www.apache.org/licenses/LICENSE-2.0
  *
@@ -17,10 +18,12 @@
 package com.crash4j.engine.spi.instrument.bcel.verifier.structurals;
 
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.HashSet;
-import java.util.Hashtable;
-import java.util.Iterator;
+import java.util.List;
+import java.util.Map;
 import java.util.Set;
+
 
 import com.crash4j.engine.spi.instrument.bcel.generic.ASTORE;
 import com.crash4j.engine.spi.instrument.bcel.generic.ATHROW;
@@ -36,8 +39,8 @@ import com.crash4j.engine.spi.instrument.bcel.generic.MethodGen;
 import com.crash4j.engine.spi.instrument.bcel.generic.RET;
 import com.crash4j.engine.spi.instrument.bcel.generic.ReturnInstruction;
 import com.crash4j.engine.spi.instrument.bcel.generic.Select;
-import com.crash4j.engine.spi.instrument.bcel.verifier.exc.AssertionViolatedException;
-import com.crash4j.engine.spi.instrument.bcel.verifier.exc.StructuralCodeConstraintException;
+import com.crash4j.engine.spi.instrument.verifier.exc.AssertionViolatedException;
+import com.crash4j.engine.spi.instrument.verifier.exc.StructuralCodeConstraintException;
 
 	/**
 	 * Instances of this class contain information about the subroutines
@@ -59,7 +62,7 @@ import com.crash4j.engine.spi.instrument.bcel.verifier.exc.StructuralCodeConstra
    *
 	 * TODO: refer to the paper.
 	 *
-	 * @version $Id: Subroutines.java 386056 2006-03-15 11:31:56Z tcurdt $
+	 * @version $Id: Subroutines.java 1554576 2013-12-31 22:05:01Z ggregory $
 	 * @author Enver Haase
 	 * @see #getTopLevel()
 	 */
@@ -84,7 +87,7 @@ public class Subroutines{
 		private int localVariable = UNSET;
 
 		/** The instructions that belong to this subroutine. */
-		private Set instructions = new HashSet(); // Elements: InstructionHandle
+		private Set<InstructionHandle> instructions = new HashSet<InstructionHandle>(); // Elements: InstructionHandle
 		
 		/*
 		 * Refer to the Subroutine interface for documentation.
@@ -97,7 +100,7 @@ public class Subroutines{
 		 * The JSR or JSR_W instructions that define this
 		 * subroutine by targeting it.
 		 */
-		private Set theJSRs = new HashSet();
+		private Set<InstructionHandle> theJSRs = new HashSet<InstructionHandle>();
 		
 		/**
 		 * The RET instruction that leaves this subroutine.
@@ -111,20 +114,21 @@ public class Subroutines{
 		 * stack overflow errors due to recursive subSubs() calls.
 		 * Don't use this, then.
 		 */
-		public String toString(){
-			String ret = "Subroutine: Local variable is '"+localVariable+"', JSRs are '"+theJSRs+"', RET is '"+theRET+"', Instructions: '"+instructions.toString()+"'.";
+		@Override
+        public String toString(){
+			String ret = "Subroutine: Local variable is '"+localVariable+"', JSRs are '"+theJSRs+"', RET is '"+theRET+"', Instructions: '"+instructions+"'.";
 			
 			ret += " Accessed local variable slots: '";
 			int[] alv = getAccessedLocalsIndices();
-			for (int i=0; i<alv.length; i++){
-				ret += alv[i]+" ";
+			for (int element : alv) {
+				ret += element+" ";
 			}
 			ret+="'.";
 
 			ret += " Recursively (via subsub...routines) accessed local variable slots: '";
 			alv = getRecursivelyAccessedLocalsIndices();
-			for (int i=0; i<alv.length; i++){
-				ret += alv[i]+" ";
+			for (int element : alv) {
+				ret += element+" ";
 			}
 			ret+="'.";
 
@@ -139,10 +143,8 @@ public class Subroutines{
 			if (localVariable == UNSET){
 				throw new AssertionViolatedException("setLeavingRET() called for top-level 'subroutine' or forgot to set local variable first.");
 			}
-			Iterator iter = instructions.iterator();
 			InstructionHandle ret = null;
-			while(iter.hasNext()){
-				InstructionHandle actual = (InstructionHandle) iter.next();
+			for (InstructionHandle actual : instructions) {
 				if (actual.getInstruction() instanceof RET){
 					if (ret != null){
 						throw new StructuralCodeConstraintException("Subroutine with more then one RET detected: '"+ret+"' and '"+actual+"'.");
@@ -169,7 +171,7 @@ public class Subroutines{
 				throw new AssertionViolatedException("getLeavingRET() called on top level pseudo-subroutine.");
 			}
 			InstructionHandle[] jsrs = new InstructionHandle[theJSRs.size()];
-			return (InstructionHandle[]) (theJSRs.toArray(jsrs));
+			return theJSRs.toArray(jsrs);
 		}
 	
 		/**
@@ -208,7 +210,7 @@ public class Subroutines{
 		 */
 		public InstructionHandle[] getInstructions(){
 			InstructionHandle[] ret = new InstructionHandle[instructions.size()];
-			return (InstructionHandle[]) instructions.toArray(ret);
+			return instructions.toArray(ret);
 		}
 		
 		/*
@@ -225,18 +227,17 @@ public class Subroutines{
 
 		/* Satisfies Subroutine.getRecursivelyAccessedLocalsIndices(). */
 		public int[] getRecursivelyAccessedLocalsIndices(){
-			Set s = new HashSet();
+			Set<Integer> s = new HashSet<Integer>();
 			int[] lvs = getAccessedLocalsIndices();
-			for (int j=0; j<lvs.length; j++){
-				s.add(new Integer(lvs[j]));
+			for (int lv : lvs) {
+				s.add(Integer.valueOf(lv));
 			}
 			_getRecursivelyAccessedLocalsIndicesHelper(s, this.subSubs());
 			int[] ret = new int[s.size()];
-			Iterator i = s.iterator();
 			int j=-1;
-			while (i.hasNext()){
+			for (Integer index : s) {
 				j++;
-				ret[j] = ((Integer) i.next()).intValue();
+				ret[j] = index.intValue();
 			}
 			return ret;
 		}
@@ -245,14 +246,14 @@ public class Subroutines{
 		 * A recursive helper method for getRecursivelyAccessedLocalsIndices().
 		 * @see #getRecursivelyAccessedLocalsIndices()
 		 */
-		private void _getRecursivelyAccessedLocalsIndicesHelper(Set s, Subroutine[] subs){
-			for (int i=0; i<subs.length; i++){
-				int[] lvs = subs[i].getAccessedLocalsIndices();
-				for (int j=0; j<lvs.length; j++){
-					s.add(new Integer(lvs[j]));
+		private void _getRecursivelyAccessedLocalsIndicesHelper(Set<Integer> s, Subroutine[] subs){
+			for (Subroutine sub : subs) {
+				int[] lvs = sub.getAccessedLocalsIndices();
+				for (int lv : lvs) {
+					s.add(Integer.valueOf(lv));
 				}
-				if(subs[i].subSubs().length != 0){
-					_getRecursivelyAccessedLocalsIndicesHelper(s, subs[i].subSubs());
+				if(sub.subSubs().length != 0){
+					_getRecursivelyAccessedLocalsIndicesHelper(s, sub.subSubs());
 				}
 			}
 		}
@@ -262,60 +263,60 @@ public class Subroutines{
 		 */
 		public int[] getAccessedLocalsIndices(){
 			//TODO: Implement caching.
-			Set acc = new HashSet();
+			Set<Integer> acc = new HashSet<Integer>();
 			if (theRET == null && this != TOPLEVEL){
 				throw new AssertionViolatedException("This subroutine object must be built up completely before calculating accessed locals.");
 			}
-			Iterator i = instructions.iterator();
-			while (i.hasNext()){
-				InstructionHandle ih = (InstructionHandle) i.next();
-				// RET is not a LocalVariableInstruction in the current version of BCEL.
-				if (ih.getInstruction() instanceof LocalVariableInstruction || ih.getInstruction() instanceof RET){
-					int idx = ((IndexedInstruction) (ih.getInstruction())).getIndex();
-					acc.add(new Integer(idx));
-					// LONG? DOUBLE?.
-					try{
-						// LocalVariableInstruction instances are typed without the need to look into
-						// the constant pool.
-						if (ih.getInstruction() instanceof LocalVariableInstruction){
-							int s = ((LocalVariableInstruction) ih.getInstruction()).getType(null).getSize();
-							if (s==2) {
-                                acc.add(new Integer(idx+1));
-                            }
-						}
-					}
-					catch(RuntimeException re){
-						throw new AssertionViolatedException("Oops. BCEL did not like NULL as a ConstantPoolGen object.");
-					}
-				}
+			{
+    			for (InstructionHandle ih : instructions) {
+    				// RET is not a LocalVariableInstruction in the current version of BCEL.
+    				if (ih.getInstruction() instanceof LocalVariableInstruction || ih.getInstruction() instanceof RET){
+    					int idx = ((IndexedInstruction) (ih.getInstruction())).getIndex();
+    					acc.add(Integer.valueOf(idx));
+    					// LONG? DOUBLE?.
+    					try{
+    						// LocalVariableInstruction instances are typed without the need to look into
+    						// the constant pool.
+    						if (ih.getInstruction() instanceof LocalVariableInstruction){
+    							int s = ((LocalVariableInstruction) ih.getInstruction()).getType(null).getSize();
+    							if (s==2) {
+                                    acc.add(Integer.valueOf(idx+1));
+                                }
+    						}
+    					}
+    					catch(RuntimeException re){
+    						throw new AssertionViolatedException("Oops. BCEL did not like NULL as a ConstantPoolGen object.", re);
+    					}
+    				}
+    			}
 			}
 			
-			int[] ret = new int[acc.size()];
-			i = acc.iterator();
-			int j=-1;
-			while (i.hasNext()){
-				j++;
-				ret[j] = ((Integer) i.next()).intValue();
+			{
+    			int[] ret = new int[acc.size()];
+    			int j=-1;
+    			for (Integer accessedLocal : acc) {
+    				j++;
+    				ret[j] = accessedLocal.intValue();
+    			}
+    			return ret;
 			}
-			return ret;
 		}
 
 		/*
 		 * Satisfies Subroutine.subSubs().
 		 */
 		public Subroutine[] subSubs(){
-			Set h = new HashSet();
+			Set<Subroutine> h = new HashSet<Subroutine>();
 
-			Iterator i = instructions.iterator();
-			while (i.hasNext()){
-				Instruction inst = ((InstructionHandle) i.next()).getInstruction();
+			for (InstructionHandle ih : instructions) {
+				Instruction inst = ih.getInstruction();
 				if (inst instanceof JsrInstruction){
 					InstructionHandle targ = ((JsrInstruction) inst).getTarget();
 					h.add(getSubroutine(targ));
 				}
 			}
 			Subroutine[] ret = new Subroutine[h.size()];
-			return (Subroutine[]) h.toArray(ret);
+			return h.toArray(ret);
 		}
 		
 		/*
@@ -342,16 +343,16 @@ public class Subroutines{
 	}// end Inner Class SubrouteImpl
 
 	//Node coloring constants
-	private static final Integer WHITE = new Integer(0);
-	private static final Integer GRAY = new Integer(1);
-	private static final Integer BLACK = new Integer(2);
+	private static final Integer WHITE = Integer.valueOf(0);
+	private static final Integer GRAY = Integer.valueOf(1);
+	private static final Integer BLACK = Integer.valueOf(2);
 	
 	/**
-	 * The Hashtable containing the subroutines found.
+	 * The map containing the subroutines found.
 	 * Key: InstructionHandle of the leader of the subroutine.
 	 * Elements: SubroutineImpl objects.
 	 */
-	private Hashtable subroutines = new Hashtable();
+	private Map<InstructionHandle, Subroutine> subroutines = new HashMap<InstructionHandle, Subroutine>();
 
 	/**
 	 * This is referring to a special subroutine, namely the
@@ -375,19 +376,17 @@ public class Subroutines{
 		TOPLEVEL = new SubroutineImpl();
 
 		// Calculate "real" subroutines.
-		Set sub_leaders = new HashSet(); // Elements: InstructionHandle
-		for (int i=0; i<all.length; i++){
-			Instruction inst = all[i].getInstruction();
+		Set<InstructionHandle> sub_leaders = new HashSet<InstructionHandle>(); // Elements: InstructionHandle
+		for (InstructionHandle element : all) {
+			Instruction inst = element.getInstruction();
 			if (inst instanceof JsrInstruction){
 				sub_leaders.add(((JsrInstruction) inst).getTarget());
 			}
 		}
  
 		// Build up the database.
-		Iterator iter = sub_leaders.iterator();
-		while (iter.hasNext()){
+		for (InstructionHandle astore : sub_leaders) {
 			SubroutineImpl sr = new SubroutineImpl();
-			InstructionHandle astore = (InstructionHandle) (iter.next());
 			sr.setLocalVariable( ((ASTORE) (astore.getInstruction())).getIndex() );
 			subroutines.put(astore, sr);
 		}
@@ -401,63 +400,63 @@ public class Subroutines{
 		// since "Jsr 0" is disallowed in Pass 3a.
 		// Instructions shared by a subroutine and the toplevel are
 		// disallowed and checked below, after the BFS.
-		for (int i=0; i<all.length; i++){
-			Instruction inst = all[i].getInstruction();
+		for (InstructionHandle element : all) {
+			Instruction inst = element.getInstruction();
 			if (inst instanceof JsrInstruction){
 				InstructionHandle leader = ((JsrInstruction) inst).getTarget();
-				((SubroutineImpl) getSubroutine(leader)).addEnteringJsrInstruction(all[i]);
+				((SubroutineImpl) getSubroutine(leader)).addEnteringJsrInstruction(element);
 			}
 		}
 		
 		// Now do a BFS from every subroutine leader to find all the
 		// instructions that belong to a subroutine.
-		Set instructions_assigned = new HashSet(); // we don't want to assign an instruction to two or more Subroutine objects.
+		Set<InstructionHandle> instructions_assigned = new HashSet<InstructionHandle>(); // we don't want to assign an instruction to two or more Subroutine objects.
 		
-		Hashtable colors = new Hashtable(); //Graph colouring. Key: InstructionHandle, Value: Integer .
+		Map<InstructionHandle, Integer> colors = new HashMap<InstructionHandle, Integer>(); //Graph colouring. Key: InstructionHandle, Value: Integer .
 		
-		iter = sub_leaders.iterator();
-		while (iter.hasNext()){
+        List<InstructionHandle> Q = new ArrayList<InstructionHandle>();		
+		for (InstructionHandle actual : sub_leaders) {
 			// Do some BFS with "actual" as the root of the graph.
-			InstructionHandle actual = (InstructionHandle) (iter.next());
 			// Init colors
-			for (int i=0; i<all.length; i++){
-				colors.put(all[i], WHITE);
+			for (InstructionHandle element : all) {
+				colors.put(element, WHITE);
 			}
 			colors.put(actual, GRAY);
 			// Init Queue
-			ArrayList Q = new ArrayList();
+
+			Q.clear();
 			Q.add(actual); // add(Obj) adds to the end, remove(0) removes from the start.
 			
 			/* BFS ALGORITHM MODIFICATION: Start out with multiple "root" nodes, as exception handlers are starting points of top-level code, too. [why top-level? TODO: Refer to the special JustIce notion of subroutines.]*/
 			if (actual == all[0]){
-				for (int j=0; j<handlers.length; j++){
-					colors.put(handlers[j].getHandlerPC(), GRAY);
-					Q.add(handlers[j].getHandlerPC());
+				for (CodeExceptionGen handler : handlers) {
+					colors.put(handler.getHandlerPC(), GRAY);
+					Q.add(handler.getHandlerPC());
 				}
 			}
 			/* CONTINUE NORMAL BFS ALGORITHM */
 			
 			// Loop until Queue is empty
 			while (Q.size() != 0){
-				InstructionHandle u = (InstructionHandle) Q.remove(0);
+				InstructionHandle u = Q.remove(0);
 				InstructionHandle[] successors = getSuccessors(u);
-				for (int i=0; i<successors.length; i++){
-					if (((Integer) colors.get(successors[i])) == WHITE){
-						colors.put(successors[i], GRAY);
-						Q.add(successors[i]);
+				for (InstructionHandle successor : successors) {
+					if (colors.get(successor) == WHITE){
+						colors.put(successor, GRAY);
+						Q.add(successor);
 					}
 				}
 				colors.put(u, BLACK);
 			}
 			// BFS ended above.
-			for (int i=0; i<all.length; i++){
-				if (colors.get(all[i]) == BLACK){
-					((SubroutineImpl) (actual==all[0]?getTopLevel():getSubroutine(actual))).addInstruction(all[i]);
-					if (instructions_assigned.contains(all[i])){
-						throw new StructuralCodeConstraintException("InstructionImpl '"+all[i]+"' is part of more than one subroutine (or of the top level and a subroutine).");
+			for (InstructionHandle element : all) {
+				if (colors.get(element) == BLACK){
+					((SubroutineImpl) (actual==all[0]?getTopLevel():getSubroutine(actual))).addInstruction(element);
+					if (instructions_assigned.contains(element)){
+						throw new StructuralCodeConstraintException("Instruction '"+element+"' is part of more than one subroutine (or of the top level and a subroutine).");
 					}
 					else{
-						instructions_assigned.add(all[i]);
+						instructions_assigned.add(element);
 					}
 				}
 			}
@@ -468,15 +467,13 @@ public class Subroutines{
 		
 		// Now make sure no instruction of a Subroutine is protected by exception handling code
 		// as is mandated by JustIces notion of subroutines.
-		for (int i=0; i<handlers.length; i++){
-			InstructionHandle _protected = handlers[i].getStartPC();
-			while (_protected != handlers[i].getEndPC().getNext()){// Note the inclusive/inclusive notation of "generic API" exception handlers!
-				Iterator subs = subroutines.values().iterator();
-				while (subs.hasNext()){
-					Subroutine sub = (Subroutine) subs.next();
+		for (CodeExceptionGen handler : handlers) {
+			InstructionHandle _protected = handler.getStartPC();
+			while (_protected != handler.getEndPC().getNext()){// Note the inclusive/inclusive notation of "generic API" exception handlers!
+				for (Subroutine sub : subroutines.values()) {
 					if (sub != subroutines.get(all[0])){	// We don't want to forbid top-level exception handlers.
 						if (sub.contains(_protected)){
-							throw new StructuralCodeConstraintException("Subroutine instruction '"+_protected+"' is protected by an exception handler, '"+handlers[i]+"'. This is forbidden by the JustIce verifier due to its clear definition of subroutines.");
+							throw new StructuralCodeConstraintException("Subroutine instruction '"+_protected+"' is protected by an exception handler, '"+handler+"'. This is forbidden by the JustIce verifier due to its clear definition of subroutines.");
 						}
 					}
 				}
@@ -490,7 +487,7 @@ public class Subroutines{
 		// This includes that subroutines may not call themselves
 		// recursively, even not through intermediate calls to other
 		// subroutines.
-		noRecursiveCalls(getTopLevel(), new HashSet());
+		noRecursiveCalls(getTopLevel(), new HashSet<Integer>());
 
 	}
 
@@ -505,21 +502,21 @@ public class Subroutines{
 	 *
 	 * @throws StructuralCodeConstraintException if the above constraint is not satisfied.
 	 */
-	private void noRecursiveCalls(Subroutine sub, Set set){
+	private void noRecursiveCalls(Subroutine sub, Set<Integer> set){
 		Subroutine[] subs = sub.subSubs();
 
-		for (int i=0; i<subs.length; i++){
-			int index = ((RET) (subs[i].getLeavingRET().getInstruction())).getIndex();
+		for (Subroutine sub2 : subs) {
+			int index = ((RET) (sub2.getLeavingRET().getInstruction())).getIndex();
 			
-			if (!set.add(new Integer(index))){
+			if (!set.add(Integer.valueOf(index))){
 				// Don't use toString() here because of possibly infinite recursive subSubs() calls then.
-				SubroutineImpl si = (SubroutineImpl) subs[i];
+				SubroutineImpl si = (SubroutineImpl) sub2;
 				throw new StructuralCodeConstraintException("Subroutine with local variable '"+si.localVariable+"', JSRs '"+si.theJSRs+"', RET '"+si.theRET+"' is called by a subroutine which uses the same local variable index as itself; maybe even a recursive call? JustIce's clean definition of a subroutine forbids both.");
 			}
 
-			noRecursiveCalls(subs[i], set);
+			noRecursiveCalls(sub2, set);
 			
-			set.remove(new Integer(index));
+			set.remove(Integer.valueOf(index));
 		}
 	} 
 	
@@ -532,7 +529,7 @@ public class Subroutines{
 	 * @see #getTopLevel()
 	 */
 	public Subroutine getSubroutine(InstructionHandle leader){
-		Subroutine ret = (Subroutine) subroutines.get(leader);
+		Subroutine ret = subroutines.get(leader);
 		
 		if (ret == null){
 			throw new AssertionViolatedException("Subroutine requested for an InstructionHandle that is not a leader of a subroutine.");
@@ -557,14 +554,12 @@ public class Subroutines{
 	 * @see #getTopLevel()
 	 */
 	public Subroutine subroutineOf(InstructionHandle any){
-		Iterator i = subroutines.values().iterator();
-		while (i.hasNext()){
-			Subroutine s = (Subroutine) i.next();
+	    for (Subroutine s : subroutines.values()) {
 			if (s.contains(any)) {
                 return s;
             }
 		}
-System.err.println("DEBUG: Please verify '"+any+"' lies in dead code.");
+System.err.println("DEBUG: Please verify '"+any.toString(true)+"' lies in dead code.");
 		return null;
 		//throw new AssertionViolatedException("No subroutine for InstructionHandle found (DEAD CODE?).");
 	}
@@ -591,7 +586,6 @@ System.err.println("DEBUG: Please verify '"+any+"' lies in dead code.");
 	private static InstructionHandle[] getSuccessors(InstructionHandle instruction){
 		final InstructionHandle[] empty = new InstructionHandle[0];
 		final InstructionHandle[] single = new InstructionHandle[1];
-		final InstructionHandle[] pair = new InstructionHandle[2];
 		
 		Instruction inst = instruction.getInstruction();
 		
@@ -632,6 +626,7 @@ System.err.println("DEBUG: Please verify '"+any+"' lies in dead code.");
 				return ret;
 			}
 			else{
+				final InstructionHandle[] pair = new InstructionHandle[2];
 				pair[0] = instruction.getNext();
 				pair[1] = ((BranchInstruction) inst).getTarget();
 				return pair;
@@ -646,7 +641,8 @@ System.err.println("DEBUG: Please verify '"+any+"' lies in dead code.");
 	/**
 	 * Returns a String representation of this object; merely for debugging puposes.
 	 */
-	public String toString(){
-		return "---\n"+subroutines.toString()+"\n---\n";
+	@Override
+    public String toString(){
+		return "---\n"+subroutines+"\n---\n";
 	}
 }
